--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,15 @@
 Changelog
 
-Last update: August 8th, 2022
+Last update: September 10th, 2022
 (Hardwareversion / Softwareversion)
+
+v2.12 / v2.12
+==============
+- fixes:
+  - do not use scanlines if output mode is 240p/288p
+  - menu navigation when entering scaling menu in 240p/288p
+- optimize ADV7513 setup just a tiny bit for the first run through the main loop
+- update acknowledgment and license text in menu
 
 v2.11 / v2.11b
 ===============
@@ -21,22 +29,23 @@ v2.11 / v2.11
 
 v2.10 / v2.10
 ==============
+- fixes (among some others)
+  - PAL 1440p (16:9)
+  - 240p/288p AVI settings
 - add YCbCr
 - reset masking (e.g. mask reset from VI pipeline for speedrunners)
 - copy function NTSC->PAL / PAL->NTSC settings
 - introduce selection of Integer and Integer (soft) scaling. Integer (soft) was previous implementation
 - remove unused menu entries
-- bugfixes, among some others
-  - PAL 1440p (16:9)
-  - 240p/288p AVI settings
 
 v2.09 / v2.09
 ==============
-- bugfix in scaler engine for integer scaling (interpalation pixel was inserted for integer scaling)
+- fixes:
+  - scaler engine for integer scaling (interpalation pixel was inserted for integer scaling)
+  - 240p/288p output mode setup
 - add 1440p in 16:9 mode (using HDMI Tx ICs 2x scaling, which effectively mean that only even integer scaling remains an integer scale)  
   (1440p in 4:3 should be preferred if this works for you!!!)
 - add scanline calculation on color based as an option
-- bug fix in 240p/288p output mode setup
 
 v2.08 / v2.08
 ==============
